<resources>
    <string name="app_name">YourSound</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="button_login">Log in</string>
    <string name="hint_password">Password</string>
    <string name="const_image">Logo</string>
    <string name="textField_password">Password</string>
    <string name="textField_userName">User name</string>
    <string name="button_signUp">Sign Up</string>
    <string name="textField_eMail">E-mail</string>
    <string name="textField_repeatPassword">Repeat Password</string>
    <string name="track_image">Track Image</string>
    <string name="track_name">Track Name</string>
    <string name="track_author">Track Author</string>
    <string name="duration_minutes">Minutes</string>
    <string name="duration_seconds">Seconds</string>
    <string name="track_likes">Likes</string>
    <string name="track_played">Played</string>
    <string name="colon">:</string>
    <string name="heart">♥️</string>
    <string name="play">►</string>
    <string name="popular">Most Popular</string>
    <string name="log_out">Log Out</string>
    <string name="account">Account</string>
    <string name="notifications">Notification</string>
    <string name="current_track">Current Track</string>
    <string name="current_author">Current Author</string>
    <string name="write_comment">Write your comment</string>
    <string name="comments">Comments</string>
    <string name="user_name">UserName</string>
    <string name="change_information">Change Information</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="add_track">Add Track</string>
    <string name="more">More</string>
    <string name="sounds">Sounds</string>
    <string name="about">About</string>
    <string name="follow">Follow</string>
    <string name="chose_image">Chose image</string>
    <string name="chose_file">Chose file</string>
    <string name="save_changes">Save changes</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="followed">Followed</string>
    <string name="edit_profile">Edit</string>
    <string name="no_sounds">There is no sounds yet</string>
    <string name="no_results">No results found</string>
    <string name="find">Find tracks and artists</string>
</resources>
