<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_search"
            android:title="@string/title_search"
            android:icon="@drawable/baseline_search_black_24dp"/>

    <item
            android:id="@+id/navigation_profile"
            android:title="@string/title_profile"
            android:icon="@drawable/baseline_perm_identity_black_24dp"/>

    <item
            android:id="@+id/navigation_settings"
            android:title="@string/title_settings"
            android:icon="@drawable/baseline_settings_black_24dp"/>
</menu>
