<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp" app:srcCompat="@drawable/song_image" android:id="@+id/trackImage"
            android:contentDescription="@string/track_image"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>
    <TextView
            android:text="@string/track_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewTrackAuthor"
            android:layout_toEndOf="@+id/trackImage" android:layout_toRightOf="@+id/trackImage"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
            android:layout_alignTop="@+id/trackImage" android:layout_toStartOf="@+id/textViewDuration"
            android:layout_marginRight="5dp" android:layout_marginEnd="5dp"
            android:layout_toLeftOf="@+id/textViewDuration"/>
    <TextView
            android:text="@string/track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewTrackName"
            android:layout_toEndOf="@+id/trackImage" android:layout_toRightOf="@+id/trackImage"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
            android:layout_alignBottom="@+id/trackImage"
            android:textColor="@color/mainTextColor" android:layout_toStartOf="@+id/textView3"
            android:layout_toLeftOf="@+id/textView3"
            android:layout_marginRight="5dp" android:layout_marginEnd="5dp"
            android:layout_marginTop="16dp" android:layout_below="@+id/textViewTrackAuthor"/>

    <TextView
            android:text="@string/duration_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewDuration"
            android:layout_alignTop="@+id/trackImage" android:layout_marginRight="29dp"
            android:layout_marginEnd="20dp" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    <TextView
            android:text="@string/track_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewTrackPlayed"
            android:layout_alignBottom="@+id/trackImage"
            android:layout_toStartOf="@+id/textViewHeart" android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" android:layout_toLeftOf="@+id/textViewHeart"/>
    <TextView
            android:text="@string/track_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewTrackLikes"
            android:layout_marginRight="20dp" android:layout_marginEnd="20dp"
            android:layout_alignBottom="@+id/trackImage"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
    />

    <TextView
            android:text="@string/heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewHeart"
            android:layout_toStartOf="@+id/textViewTrackLikes"
             android:layout_toLeftOf="@+id/textViewTrackLikes"
            android:layout_alignBottom="@+id/trackImage"/>
    <TextView
            android:text="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:layout_toStartOf="@+id/textViewTrackPlayed" android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp" android:layout_toLeftOf="@+id/textViewTrackPlayed"
            android:layout_alignBottom="@+id/trackImage"
            android:textSize="14sp"/>
</RelativeLayout>
