<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddTrack.AddTrackActivity">

    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/song_image"
            android:id="@+id/add_track_image"
            android:contentDescription="@string/track_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
    />

    <Button
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_track_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/chose_image"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/textColorWhite"
        android:id="@+id/add_track_chose_image_btn"
        android:layout_marginTop="20dp"
    >
    </Button>

    <Button
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_track_chose_image_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/chose_file"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/textColorWhite"
            android:id="@+id/add_track_chose_file_btn"
            android:layout_marginTop="20dp"
    >
    </Button>

    <EditText
            android:id="@+id/add_track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:background="@drawable/et_background"
            android:hint="@string/name"
            android:autofillHints="@string/track_name"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/add_track_chose_file_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:theme="@style/EditTextSearch"
    >
    </EditText>

    <Button
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/add"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/textColorWhite"
            android:id="@+id/add_track_add"
            android:layout_marginTop="20dp"
    >
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>