<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login">
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="24dp"
            android:id="@+id/guideline_left"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_end="24dp"
            android:id="@+id/guideline_right"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/music"
            android:id="@+id/imageView2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left" android:layout_marginTop="40dp"
            android:contentDescription="@string/const_image" app:layout_constraintEnd_toStartOf="@+id/guideline_right"/>

    <EditText
            android:theme="@style/EditTextTheme"
            android:id="@+id/editText_login_userName"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="40dp"
            android:hint="@string/textField_userName"
            android:textColor="@color/textColorWhite"
            android:textColorHint="@color/hintColor"
    />

    <EditText
            android:theme="@style/EditTextTheme"
            android:id="@+id/editText_login_password"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/editText_login_userName"
            android:hint="@string/textField_password"
            android:inputType="textPassword"
            android:textColor="@color/textColorWhite"
            android:textColorHint="@color/hintColor"
    />
    <Button
            android:text="@string/button_login"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/textColorWhite"
            android:layout_height="wrap_content"
            android:id="@+id/button_logIn_logIn"
            app:layout_constraintTop_toBottomOf="@+id/editText_login_password" android:layout_marginTop="20dp"/>
    <Button
            android:text="@string/button_signUp"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/textColorWhite"
            android:layout_height="wrap_content"
            android:id="@+id/button_logIn_signUp"
            app:layout_constraintTop_toBottomOf="@+id/button_logIn_logIn" android:layout_marginTop="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>